--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    background-color: #040d19;
+    margin: 0;
+    padding: 0;
+    color: #fff;
+    font-size: 16px;
+}
